# agent_template

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  README.md  README_zh.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  startup.sh
.claude/agents/: design-reviewer.md  test-writer.md
.claude/skills/create-migration/: SKILL.md
.claude/skills/glitchtip/: SKILL.md
.claude/skills/project-conventions/: SKILL.md
backend/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_user_table.py  002_add_providers_llm_models_settings.py  003_add_user_token_version.py  004_add_setting_created_at.py  005_add_model_metadata.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: auth.py  health.py  llm_model.py  provider.py  setting.py
backend/app/core/: config.py  error_tracking.py  langfuse.py  logging.py  rate_limit.py  sentry.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  base.py  llm_model.py  provider.py  setting.py  user.py
backend/app/schemas/: llm_model.py  provider.py  setting.py  user.py
backend/app/services/: auth.py  llm_model.py  model_metadata.py  provider.py  setting.py
backend/tests/: conftest.py  test_auth.py  test_glitchtip_e2e.py  test_glitchtip_integration.py  test_health.py  test_integration.py  test_llm_model.py  test_model_metadata.py  test_models.py  test_provider.py  test_rate_limit.py  test_schemas.py  test_setting.py
docs/en/: README.md
docs/en/developer-guide/: overview.md
docs/superpowers/plans/: 2026-05-23-phase1-claude-execution-report.md  2026-05-23-phase1-engineering-foundation.md  2026-05-28-model-configuration.md  2026-05-28-provider-error-handling-and-test-connection.md  2026-05-29-login-auth.md  2026-05-29-settings-modal.md  2026-05-30-selection-reference-tool.md  2026-06-01-model-metadata.md
docs/superpowers/specs/: 2026-05-28-model-configuration-design.md  2026-05-28-provider-error-handling-and-test-connection-design.md  (+6 more)
docs/zh/: README.md
frontend/: .env.example  .prettierignore  Dockerfile  commitlint.config.js  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.js
frontend/.husky/: commit-msg  pre-commit  pre-push
frontend/e2e/: account-settings.spec.ts  agent-chat-panel.spec.ts  glitchtip.spec.ts  model-configuration.spec.ts  selection-screenshot.spec.ts
observability/: README.md
observability/glitchtip/: README.md
observability/langfuse/: README.md
observability/sentry/: README.md
scripts/: dev.sh  format.sh  test.sh
shared/: logger.py  pyproject.toml
shared/telemetry/: __init__.py  config.py  core.py  decorators.py  instrumentation.py  providers.py
shared/telemetry/context/: __init__.py  attributes.py  events.py  large_data.py  manager.py  propagation.py  span.py
shared/telemetry/instrumentation/: __init__.py  fastapi.py  httpx.py  redis.py  requests.py  sqlalchemy.py  system_metrics.py
shared/telemetry/metrics/: __init__.py  business.py  decorators.py
shared/tests/: test_crypto.py  test_ip_util.py  test_sensitive_data_masker.py  test_telemetry_config.py
shared/utils/: crypto.py  http_client.py  http_util.py  ip_util.py  sensitive_data_masker.py
telemetry/: README.md  docker-compose.yml  otel-collector-config.yaml
(+87 files in other folders)
