[project]
name = "agent-template-shared"
version = "0.1.0"
description = "Shared utilities for Agent Template"
requires-python = ">=3.10,<3.14"
dependencies = [
    "httpx[brotli]>=0.26.0",
    "cryptography>=42.0.4",
    "pycryptodome>=3.20.0",
    "structlog>=23.1.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "black>=23.7.0",
    "isort>=5.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
